[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Fonts/arco/ARCO for OSX.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/PausedScreen/Restart.gd" type="Script" id=2]
[ext_resource path="res://Game/Options/TiltSensitivity.gd" type="Script" id=3]
[ext_resource path="res://Game/PausedScreen/PausedScreen.gd" type="Script" id=4]
[ext_resource path="res://Game/PausedScreen/Resume.gd" type="Script" id=5]
[ext_resource path="res://Game/PausedScreen/Quit.gd" type="Script" id=6]
[ext_resource path="res://Game/PausedScreen/Topdown.gd" type="Script" id=7]
[ext_resource path="res://Game/PausedScreen/Regular.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 1 )

[node name="PausedScreen" type="Node"]
pause_mode = 2
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 860, 540 )
color = Color( 0, 0, 0, 0.576471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftVBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 65.0
margin_top = -360.0
margin_right = 570.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="Control" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_right = 505.0
margin_bottom = 100.0
rect_min_size = Vector2( 340, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsedInRun" type="HBoxContainer" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_top = 104.0
margin_right = 505.0
margin_bottom = 156.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/UI/LeftVBoxContainer/TimeElapsedInRun"]
margin_right = 394.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Time Elapsed: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeElapsed" type="Label" parent="CanvasLayer/UI/LeftVBoxContainer/TimeElapsedInRun"]
margin_left = 398.0
margin_right = 505.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "0:03"

[node name="Spacer2" type="Control" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_top = 160.0
margin_right = 505.0
margin_bottom = 260.0
rect_min_size = Vector2( 340, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_left = 175.0
margin_top = 264.0
margin_right = 329.0
margin_bottom = 304.0
rect_pivot_offset = Vector2( 77, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Resume"
flat = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/LeftVBoxContainer/Resume"]

[node name="Spacer3" type="Control" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_top = 308.0
margin_right = 505.0
margin_bottom = 328.0
rect_min_size = Vector2( 340, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_left = 165.0
margin_top = 332.0
margin_right = 339.0
margin_bottom = 372.0
rect_pivot_offset = Vector2( 87, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Restart"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/LeftVBoxContainer/Restart"]

[node name="Spacer4" type="Control" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_top = 376.0
margin_right = 505.0
margin_bottom = 396.0
rect_min_size = Vector2( 340, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CanvasLayer/UI/LeftVBoxContainer"]
margin_left = 201.0
margin_top = 400.0
margin_right = 303.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( 51, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Quit"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/LeftVBoxContainer/Quit"]

[node name="RightVBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -360.0
margin_bottom = 360.0
rect_min_size = Vector2( 600, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer1" type="Control" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 340, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 4 )
text = "Tilt config"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer2" type="Control" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 151.0
margin_right = 600.0
margin_bottom = 171.0
rect_min_size = Vector2( 340, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topdown" type="Button" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_left = 205.0
margin_top = 175.0
margin_right = 395.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 95, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Topdown"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/RightVBoxContainer/Topdown"]

[node name="Regular" type="Button" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_left = 214.0
margin_top = 219.0
margin_right = 386.0
margin_bottom = 259.0
rect_pivot_offset = Vector2( 86, 20 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
enabled_focus_mode = 0
text = "Regular"
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/UI/RightVBoxContainer/Regular"]

[node name="Spacer3" type="Control" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 263.0
margin_right = 600.0
margin_bottom = 283.0
rect_min_size = Vector2( 340, 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TiltSensitivity" type="Label" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 287.0
margin_right = 600.0
margin_bottom = 387.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = SubResource( 5 )
text = "Tilt Sensitivity"
align = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="CanvasLayer/UI/RightVBoxContainer/TiltSensitivity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 1.99998
margin_right = 200.0
margin_bottom = 18.0
rect_scale = Vector2( 1, 3 )
min_value = 100.0
max_value = 125.0
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume" type="Label" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 391.0
margin_right = 600.0
margin_bottom = 491.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 141, 17 )
custom_fonts/font = SubResource( 6 )
text = "Music Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="CanvasLayer/UI/RightVBoxContainer/MusicVolume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -8.0
margin_right = 200.0
margin_bottom = 8.0
rect_scale = Vector2( 1, 3 )
min_value = -30.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxVolume" type="Label" parent="CanvasLayer/UI/RightVBoxContainer"]
margin_top = 495.0
margin_right = 600.0
margin_bottom = 595.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 141, 17 )
custom_fonts/font = SubResource( 6 )
text = "Sfx Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxSlider" type="HSlider" parent="CanvasLayer/UI/RightVBoxContainer/SfxVolume"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -8.0
margin_right = 200.0
margin_bottom = 8.0
rect_scale = Vector2( 1, 3 )
min_value = -30.0
max_value = 0.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="CanvasLayer/UI/LeftVBoxContainer/Resume" to="CanvasLayer/UI/LeftVBoxContainer/Resume" method="_on_Resume_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/LeftVBoxContainer/Resume" to="CanvasLayer/UI/LeftVBoxContainer/Resume" method="_on_Resume_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/LeftVBoxContainer/Resume/Tween" to="CanvasLayer/UI/LeftVBoxContainer/Resume" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="CanvasLayer/UI/LeftVBoxContainer/Restart" to="CanvasLayer/UI/LeftVBoxContainer/Restart" method="_on_Restart_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/LeftVBoxContainer/Restart" to="CanvasLayer/UI/LeftVBoxContainer/Restart" method="_on_Restart_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/LeftVBoxContainer/Restart/Tween" to="CanvasLayer/UI/LeftVBoxContainer/Restart" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="CanvasLayer/UI/LeftVBoxContainer/Quit" to="CanvasLayer/UI/LeftVBoxContainer/Quit" method="_on_Quit_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/LeftVBoxContainer/Quit" to="CanvasLayer/UI/LeftVBoxContainer/Quit" method="_on_Quit_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/LeftVBoxContainer/Quit/Tween" to="CanvasLayer/UI/LeftVBoxContainer/Quit" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="CanvasLayer/UI/RightVBoxContainer/Topdown" to="CanvasLayer/UI/RightVBoxContainer/Topdown" method="_on_Topdown_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/RightVBoxContainer/Topdown" to="CanvasLayer/UI/RightVBoxContainer/Topdown" method="_on_Topdown_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/RightVBoxContainer/Topdown/Tween" to="CanvasLayer/UI/RightVBoxContainer/Topdown" method="_on_Tween_tween_all_completed"]
[connection signal="button_down" from="CanvasLayer/UI/RightVBoxContainer/Regular" to="CanvasLayer/UI/RightVBoxContainer/Regular" method="_on_Regular_button_down"]
[connection signal="button_up" from="CanvasLayer/UI/RightVBoxContainer/Regular" to="CanvasLayer/UI/RightVBoxContainer/Regular" method="_on_Regular_button_up"]
[connection signal="tween_all_completed" from="CanvasLayer/UI/RightVBoxContainer/Regular/Tween" to="CanvasLayer/UI/RightVBoxContainer/Regular" method="_on_Tween_tween_all_completed"]
